objects/Legal_Quote_Item__c.object
<CustomObject>
    <fields>
        <fullName>Fee_Excl_VAT__c</fullName>
        <label>Fee (Excl. VAT)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Fixed_Service_Name__c</fullName>
        <formula>Fixed_Service__r.Fixed_Service_Activity__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Fixed Service Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fixed_Service__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Fixed Service</label>
        <referenceTo>Fixed_Service__c</referenceTo>
        <relationshipLabel>Legal Quote Items</relationshipLabel>
        <relationshipName>Legal_Quote_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legal_Quote__c</fullName>
        <label>Legal Quote</label>
        <referenceTo>Legal_Quote__c</referenceTo>
        <relationshipLabel>Legal Quote Items</relationshipLabel>
        <relationshipName>Legal_Quote_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Legal Quote Item</label>
    <nameField>
        <displayFormat>QI-{00000}</displayFormat>
        <label>Legal Quote Item #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Legal Quote Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>